--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
     <div id="contact" class="content-section">
         <h1>Contact Me</h1>
         <a href="https://www.instagram.com/soul_gun27" target="_blank">
-            <img src="/images/ig.png" alt="Instagram" style="width: 100px; height: 100px;">
+            <img src="images/ig.png" alt="Instagram" style="width: 100px; height: 100px;">
         </a>
         <a href="https://github.com/Ningtzhan" target="_blank">
-            <img src="/images/github.png" alt="Github" style="width: 100px; height: 100px;">
+            <img src="images/github.png" alt="Github" style="width: 100px; height: 100px;">
         </a>
         <a href="https://codepen.io/Ningtzhan" target="_blank">
-            <img src="/images/codepen.png" alt="Codepen" style="width: 100px; height: 100px;">
+            <img src="images/codepen.png" alt="Codepen" style="width: 100px; height: 100px;">
         </a>       
     </div>
     <footer id="footer">
