--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TzHanNing</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="/images/ning.jpg" href="/images/ning.jpg"> 
+    <link rel="icon" type="images/ning.jpg" href="/images/ning.jpg"> 
 </head>
 <body>
     <nav>
@@ -21,17 +21,17 @@
     <div id="photo" class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="/images/photo-1.jpg" style="width:100%">
+                <img src="images/photo-1.jpg" style="width:100%">
                 <div class="text">photographer：rompalli harish: https://www.pexels.com/zh-tw/photo/1698618/</div>
             </div>            
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="/images/photo-2.jpg" style="width:100%">
+                <img src="images/photo-2.jpg" style="width:100%">
                 <div class="text">photographer：Phil Kallahar: https://www.pexels.com/zh-tw/photo/983200/</div>
             </div>            
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="/images/photo-3.jpg" style="width:100%">
+                <img src="images/photo-3.jpg" style="width:100%">
                 <div class="text">photographer：eberhard grossgasteiger: https://www.pexels.com/zh-tw/photo/1287145/</div>
             </div>            
             <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -83,13 +83,13 @@
     <div id="contact" class="content-section">
         <h1>Contact Me</h1>
         <a href="https://www.instagram.com/soul_gun27" target="_blank">
-            <img src="/images/ig.png" alt="Instagram" style="width: 100px; height: 100px;">
+            <img src="images/ig.png" alt="Instagram" style="width: 100px; height: 100px;">
         </a>
         <a href="https://github.com/Ningtzhan" target="_blank">
-            <img src="/images/github.png" alt="Github" style="width: 100px; height: 100px;">
+            <img src="images/github.png" alt="Github" style="width: 100px; height: 100px;">
         </a>
         <a href="https://codepen.io/Ningtzhan" target="_blank">
-            <img src="/images/codepen.png" alt="Codepen" style="width: 100px; height: 100px;">
+            <img src="images/codepen.png" alt="Codepen" style="width: 100px; height: 100px;">
         </a>       
     </div>
     <footer id="footer">
