--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TzHanNing</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="images/ning.jpg" href="/images/ning.jpg"> 
+    <link rel="icon" type="images/ning.jpg" href="images/ning.jpg"> 
 </head>
 <body>
     <nav>
