--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="images/ning.jpg" href="images/ning.jpg"> 
 </head>
 <body>
+    <div id="snowflakes"></div> 
     <nav>
         <a href="#photo">TzHanNing</a>
         <a href="#home">Home</a>
