--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div id="contact" class="content-section">
         <h1>Contact Me</h1>
-        <a href="https://www.instagram.com/soul_gun27" target="_blank">
+        <a href="https://www.instagram.com/soulgunitso" target="_blank">
             <img src="images/ig.png" alt="Instagram" style="width: 100px; height: 100px;">
         </a>
         <a href="https://github.com/Ningtzhan" target="_blank">
