--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     </div>
                 </div>
                 <div class="song-item" data-video-id="YOUTUBE_ID" data-song-name="Page 0 - Single">
-                    <img src="images/taeyeon_page0.jpg" alt="Page 0">
+                    <img src="images/Taeyeon_page0.jpg" alt="Page 0">
                     <div class="song-info">
                         <h3>Page 0</h3>
                         <p>單曲 · 2018.08.10</p>
